--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -33,6 +33,22 @@
     font-size: 26px;
     font-weight: 600;
 }
+
+.loginlogout{
+    margin-top: 4px;
+    padding: 10px;
+    color:#FFFFED;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #6d6b6b;
+}
+
+.username{
+    font-size: 18px;
+    font-weight: 500;
+    color: #6d6b6b;
+}
+
 .clickable {
     display: none;
 }
